--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.6/bin/python3"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.6/bin/python3",
+    "files.associations": {
+        "iterator": "c",
+        "__bit_reference": "c",
+        "__string": "c",
+        "algorithm": "c",
+        "deque": "c",
+        "string": "c",
+        "string_view": "c"
+    }
 }
