--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react-pose": "^4.0.8",
     "react-router": "^3.0.5",
     "react-scripts-ts": "^2.17.0",
-    "tslint": "^5.11.0"
+    "tslint": "^5.11.0",
+    "@types/jest": "^23.3.1",
+    "@types/node": "^10.9.2",
+    "concurrently": "^3.6.0",
+    "typescript": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
