--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@types/dotenv": "^6.1.0",
+    "@types/jest": "^23.3.1",
+    "@types/node": "^10.9.2",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
+    "concurrently": "^3.6.0",
     "dotenv": "^6.2.0",
     "mapbox-gl": "^0.48.0",
     "mobx": "^5.0.4",
@@ -14,11 +17,9 @@
     "react-dom": "^16.4.1",
     "react-pose": "^4.0.8",
     "react-router": "^3.0.5",
+    "react-router-dom": "^5.0.0",
     "react-scripts-ts": "^2.17.0",
     "tslint": "^5.11.0",
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.9.2",
-    "concurrently": "^3.6.0",
     "typescript": "^3.0.1"
   },
   "scripts": {
@@ -37,7 +38,7 @@
     "typescript": "^3.0.1"
   },
   "proxy": {
-    "/": {
+    "trips/": {
       "target": "http://localhost:8000/",
       "ws": true,
       "changeOrigin": true
